logs/celery_intel_worker.err
C:\Users\11581\AppData\Local\Programs\Python\Python311\Lib\site-packages\pydantic\_internal\_fields.py:149: UserWarning: Field "model_used" has conflict with protected namespace "model_".

You may be able to resolve this warning by setting `model_config['protected_namespaces'] = ()`.
  warnings.warn(
Usage: celery [OPTIONS] COMMAND [ARGS]...
Try 'celery --help' for help.

Error: 
Unable to load celery application.
While trying to load the module backend.tasks.intelligence_collection_queue_app.celery_app the following error occurred:
Traceback (most recent call last):
  File "C:\Users\11581\AppData\Local\Programs\Python\Python311\Lib\site-packages\celery\bin\celery.py", line 137, in celery
    app = find_app(app)
          ^^^^^^^^^^^^^
  File "C:\Users\11581\AppData\Local\Programs\Python\Python311\Lib\site-packages\celery\app\utils.py", line 383, in find_app
    sym = symbol_by_name(app, imp=imp)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\11581\AppData\Local\Programs\Python\Python311\Lib\site-packages\kombu\utils\imports.py", line 59, in symbol_by_name
    module = imp(module_name, package=package, **kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\11581\AppData\Local\Programs\Python\Python311\Lib\site-packages\celery\utils\imports.py", line 105, in import_from_cwd
    return imp(module, package=package)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\11581\AppData\Local\Programs\Python\Python311\Lib\importlib\__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1206, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1178, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1128, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "<frozen importlib._bootstrap>", line 1206, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1178, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1149, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 940, in exec_module
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "C:\Users\11581\Downloads\sport-lottery-sweeper\backend\tasks\__init__.py", line 62, in <module>
    from . import intelligence_tasks
  File "C:\Users\11581\Downloads\sport-lottery-sweeper\backend\tasks\intelligence_tasks.py", line 43
    logger.info("еј\u20acе§‹ж‰§иЎЊе®љжњџжѓ…жЉҐж•°жЌ\ue1be€¬еЏ–д»»еЉ?)
                ^
SyntaxError: unterminated string literal (detected at line 43)

